Criar interface para a troca de senha

--- a/app/src/main/res/layout/dialog_confirm_password.xml
+++ b/app/src/main/res/layout/dialog_confirm_password.xml
@@ -22,10 +22,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="8dp">
+        android:padding="16dp">
 
         <TextView
-            android:id="@+id/textView4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Por favor, digite sua senha para continuar:"
@@ -33,8 +32,9 @@
 
         <EditText
             android:id="@+id/passwordEditText"
+            style="@style/EditTextTheme"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:drawableStart="@drawable/ic_lock_24dp"
             android:drawableLeft="@drawable/ic_lock_24dp"
             android:ems="10"
@@ -53,21 +53,19 @@
 
         <Button
             android:id="@+id/cancelButton"
+            style="@style/ButtonTheme"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="35dp"
-            android:background="@drawable/background_button"
-            android:text="@string/cancelar"
-            android:textColor="@android:color/white" />
+            android:text="@string/cancelar" />
 
         <Button
             android:id="@+id/okButton"
+            style="@style/ButtonTheme"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="16dp"
-            android:background="@drawable/background_button"
-            android:text="@android:string/ok"
-            android:textColor="@android:color/white" />
+            android:text="@android:string/ok" />
 
     </LinearLayout>
 
