--- a/app/src/main/res/layout/adapter_coleta_realizada.xml
+++ b/app/src/main/res/layout/adapter_coleta_realizada.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
-        android:textColor="@color/colorBlack"
+        android:textColor="@android:color/black"
         android:textSize="18sp" />
 
     <TextView
@@ -19,7 +19,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
         android:text="@string/coletar"
-        android:textColor="@color/colorBlack"
+        android:textColor="@android:color/black"
         android:textSize="18sp" />
 
     <TextView
@@ -27,7 +27,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
-        android:textColor="@color/colorBlack"
+        android:textColor="@android:color/black"
         android:textSize="18sp" />
 
     <TextView
@@ -35,7 +35,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
-        android:textColor="@color/colorBlack"
+        android:textColor="@android:color/black"
         android:textSize="18sp" />
 
     <TextView
@@ -43,7 +43,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
-        android:textColor="@color/colorBlack"
+        android:textColor="@android:color/black"
         android:textSize="18sp" />
 
 </LinearLayout>
