--- a/app/src/main/res/layout/adapter_entrega.xml
+++ b/app/src/main/res/layout/adapter_entrega.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
             android:text="@string/nota"
-            android:textColor="@color/colorBlack"
+            android:textColor="@android:color/black"
             android:textSize="18sp" />
 
         <TextView
@@ -28,7 +28,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
             android:text="@string/cliente"
-            android:textColor="@color/colorBlack"
+            android:textColor="@android:color/black"
             android:textSize="18sp" />
 
         <TextView
@@ -37,7 +37,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
             android:text="@string/motorista"
-            android:textColor="@color/colorBlack"
+            android:textColor="@android:color/black"
             android:textSize="18sp" />
 
         <TextView
@@ -45,7 +45,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/saida"
-            android:textColor="@color/colorBlack"
+            android:textColor="@android:color/black"
             android:textSize="18sp" />
 
     </LinearLayout>
@@ -62,7 +62,7 @@
             android:layout_height="match_parent"
             android:gravity="bottom"
             android:text="@string/chegada"
-            android:textColor="@color/colorBlack"
+            android:textColor="@android:color/black"
             android:textSize="18sp" />
     </LinearLayout>
 
@@ -79,7 +79,7 @@
             android:layout_height="match_parent"
             android:gravity="center"
             android:text="@string/status"
-            android:textColor="@color/colorStatus"
+            android:textColor="@android:color/black"
             android:textSize="18sp" />
     </LinearLayout>
 </LinearLayout>
