--- a/app/src/main/res/layout/adapter_funcionario_cadastrado.xml
+++ b/app/src/main/res/layout/adapter_funcionario_cadastrado.xml
@@ -43,7 +43,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
             android:text="@string/cargo"
-            android:textColor="@color/colorBlack"
+            android:textColor="@android:color/black"
             android:textSize="14sp" />
     </LinearLayout>
 
