--- a/app/src/main/res/layout/adapter_nota.xml
+++ b/app/src/main/res/layout/adapter_nota.xml
@@ -20,7 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
-        android:textColor="@color/colorBlack"
+        android:textColor="@android:color/black"
         android:textSize="18sp" />
 
 </LinearLayout>
