--- a/app/src/main/res/layout/fragment_roteirista_entrega_nova.xml
+++ b/app/src/main/res/layout/fragment_roteirista_entrega_nova.xml
@@ -28,7 +28,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:text="@string/nota"
-                    android:textColor="@color/colorBlack"
+                    android:textColor="@android:color/black"
                     android:textSize="18sp" />
 
                 <Spinner
