--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -43,4 +43,9 @@
         <item name="android:background">@drawable/background_edit_text</item>
     </style>
 
+    <style name="Toolbar" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:itemBackground">@android:color/white</item>
+    </style>
+
 </resources>
